[gd_scene load_steps=6 format=2]

[ext_resource path="res://art/head.glb" type="PackedScene" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://art/red_standard.glb" type="PackedScene" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.430125, 0.26897, 0.576146 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1.01398, 7.571, 3.80446 )

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0520018, 0 )
script = ExtResource( 2 )

[node name="Pivot" type="Spatial" parent="."]

[node name="red_standard" parent="Pivot" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.225977, 0 )
shape = SubResource( 1 )

[node name="Head_Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0 )

[node name="head" parent="Head_Pivot" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.2 )

[node name="Camera" type="Camera" parent="Head_Pivot"]
transform = Transform( 1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0, 0.2, -0.218068 )
current = true

[node name="FireCooldown" type="Timer" parent="."]
wait_time = 0.4

[node name="ReviveTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="PanelHitbox" type="Area" parent="." groups=["plate"]]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2" type="CollisionShape" parent="PanelHitbox" groups=["plate"]]
transform = Transform( 0.061546, -0.0188704, 0, 0.0164912, 0.0704254, 0, 0, 0, 0.0181041, 0.423, 0.351, 0 )
shape = SubResource( 2 )

[node name="CollisionShape3" type="CollisionShape" parent="PanelHitbox" groups=["plate"]]
transform = Transform( -1.86265e-09, 5.82077e-10, -0.203499, 0.0217925, 0.0685128, -4.87021e-10, 0.0598745, -0.0249366, -5.56667e-09, -0.000117183, 0.351, 0.554325 )
shape = SubResource( 2 )

[node name="CollisionShape4" type="CollisionShape" parent="PanelHitbox" groups=["plate"]]
transform = Transform( -9.7548e-09, -4.06269e-09, -0.203499, -0.0217925, 0.0685128, 0, 0.0598745, 0.0249366, -3.31541e-08, 0, 0.351, -0.554 )
shape = SubResource( 2 )

[node name="NetworkTickRate" type="Timer" parent="."]
wait_time = 0.03
autostart = true

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="FireCooldown" to="." method="_on_FireCooldown_timeout"]
[connection signal="timeout" from="ReviveTimer" to="." method="_on_ReviveTimer_timeout"]
[connection signal="body_entered" from="PanelHitbox" to="." method="_on_PanelHitbox_body_entered"]
[connection signal="timeout" from="NetworkTickRate" to="." method="_on_NetworkTickRate_timeout"]
